--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -23,13 +23,13 @@ under the License.
 
 // BACKGROUND COLORS
 ////////////////////
-$nav-bg: #222a3f !default;
+$nav-bg: #32374b !default;
 $examples-bg: #2E3336 !default;
 $code-bg: #1E2224 !default;
 $code-annotation-bg: #191D1F !default;
 $nav-subitem-bg: #32374b !default;
-$nav-active-bg: #32374b !default;
-$nav-active-parent-bg: #1E2224 !default; // parent links of the current section
+$nav-active-bg: #484b5c !default;
+$nav-active-parent-bg: #32374b !default; // parent links of the current section
 $lang-select-border: #000 !default;
 $lang-select-bg: #1E2224 !default;
 $lang-select-active-bg: $examples-bg !default; // feel free to change this to blue or something
