--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -27,10 +27,11 @@ under the License.
 <!doctype html>
 <html>
   <head>
+    <%= favicon_tag 'images/favicon.ico' %>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title><%= current_page.data.title || "API Documentation" %></title>
+    <title><%= "Switcheo API Reference" %></title>
 
     <style>
       <%= Rouge::Themes::MonokaiSublime.render(:scope => '.highlight') %>
