--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -45,7 +45,7 @@ $search-notice-bg: #c97a7e !default;
 ////////////////////
 $main-text: #333 !default; // main content text color
 $nav-text: #fff !default;
-$nav-active-text: #fff !default;
+$nav-active-text: #7CBF67 !default;
 $nav-active-parent-text: #fff !default; // parent links of the current section
 $lang-select-text: #fff !default; // color of unselected language tab text
 $lang-select-active-text: #fff !default; // color of selected language tab text
@@ -55,7 +55,7 @@ $lang-select-pressed-text: #fff !default; // color of language tab text when mou
 // SIZES
 ////////////////////
 $nav-width: 230px !default; // width of the navbar
-$examples-width: 60% !default; // portion of the screen taken up by code examples
+$examples-width: 45% !default; // portion of the screen taken up by code examples
 $logo-margin: 0px !default; // margin below logo
 $main-padding: 50px !default; // padding to left and right of content & examples
 $nav-padding: 15px !default; // padding to left and right of navbar
