--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -79,7 +79,7 @@ a {
     display: block;
     max-width: 100%;
     margin-bottom: $logo-margin;
-    padding: 15px;
+    padding: 20px 55px 20px 20px;
     box-sizing: border-box;
   }
 
